--- a/widgets/alert.html
+++ b/widgets/alert.html
@@ -8,6 +8,8 @@
                 text-shadow: 1.5px 1.5px rgba(0, 0, 0, 0.3);
                 padding: 0;
                 margin: 0;
+                width: 100vw;
+                width: 100vmin;
             }
 
             #image,
@@ -15,23 +17,27 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                object-fit: cover;
-                min-height: 25vh;
-                max-height: 70vh;
-                max-width: 100vw;
-            }
-
-            #event {
+                object-fit: contain;
                 height: 100%;
                 width: 100%;
-                text-align: center;
             }
 
-            #text-container {
-                word-wrap: break-word;
-                margin-left: auto;
-                margin-right: auto;
-                max-width: 85vw;
+            .draggable {
+                overflow: hidden;
+                position: absolute;
+            }
+
+            .container {
+                left: 50%;
+                top: 50%;
+                width: 100vmin;
+                height: 100vmin;
+                transform: translate(-50%, -50%);
+                position: absolute;
+            }
+
+            #alert-text {
+                text-align: center;
             }
 
             .hide {
@@ -43,14 +49,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script>
         <script src="overlayutil.js"></script>
+        <script src="draggable.js"></script>
     </head>
 
     <body>
-        <div id="event" style="opacity: 0;">
-            <img src="" id="image" />
-            <video src="" id="video"></video>
-
-            <div id="text-container"></div>
+        <div class="container" style="opacity: 0;">
+            <div id="alert-text" class="draggable"></div>
+            <div id="alert-image" class="draggable">
+                <img src="" id="image" class="hide" />
+                <video src="" id="video" class="hide"></video>
+            </div>
         </div>
     </body>
 
@@ -61,7 +69,10 @@
             const DISPLAY_TIME = 10 * 1000;
             const FADE_TIME = 1000;
 
-            const textContainer = document.querySelector("#text-container");
+            const eText = document.querySelector("#alert-text");
+            const eImage = document.querySelector("#alert-image");
+            const eContainer = document.querySelector(".container");
+
             const video = document.querySelector("#video");
             const img = document.querySelector("#image");
 
@@ -70,15 +81,42 @@
             let audio = {};
             let queue = [];
 
-            overlay.changeFont("Poppins");
+            const textDraggable = new Draggable(eText);
+            const imageDraggable = new Draggable(eImage);
 
-            overlay.on("config", (data) => {
+            function update(data) {
                 config = data;
 
                 overlay.changeFont(config.font);
 
-                audio.volume = config.volume;
-                textContainer.style = "color: " + config.text_color + "; font-size: " + config.font_size + "px;";
+                const sizeDelta = (config.font_size / 1000) * eContainer.offsetWidth;
+
+                eText.style.color = config.text_color;
+                eText.style.fontSize = `${sizeDelta}px`;
+
+                updateDraggables();
+            }
+
+            function updateDraggables(draggable_positions = config.draggable_positions) {
+                const { alert_text, alert_image } = draggable_positions;
+
+                textDraggable.setSize(alert_text.width, alert_text.height);
+                textDraggable.setPosition(alert_text.posX, alert_text.posY);
+                textDraggable.setZ(alert_text.zIndex);
+
+                imageDraggable.setSize(alert_image.width, alert_image.height);
+                imageDraggable.setPosition(alert_image.posX, alert_image.posY);
+                imageDraggable.setZ(alert_image.zIndex);
+            }
+
+            overlay.on("config", update);
+
+            window.addEventListener("resize", () => {
+                update(config);
+            });
+
+            overlay.on("draggable_update", (data) => {
+                updateDraggables(data);
             });
 
             overlay.on("audio_file", (data) => {
@@ -107,21 +145,28 @@
                     if (files.image_file.startsWith("data:video")) {
                         video.src = files.image_file;
                         video.play();
-                        video.classList = "";
+
                         video.addEventListener("loadeddata", () => {
-                            displayTime += video.duration * 1000;
+                            const duration = video.duration * 1000;
+                            displayTime += (duration - DISPLAY_TIME);
                         });
+
+                        video.classList = "";
                         img.classList = "hide";
                     } else {
                         video.classList = "hide";
                         img.classList = "";
+
                         img.src = files.image_file;
                     }
                 } else {
                     img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
+                    video.src = "";
+                    video.classList = "hide";
+                    img.classList = "hide";
                 }
 
-                textContainer.innerHTML = html;
+                eText.innerHTML = html;
 
                 if (config.enable_audio) {
                     playAudio();
@@ -130,7 +175,7 @@
                 displayTime -= (FADE_TIME * 2); // So it stops perfectly
 
                 anime({
-                    targets: "#event",
+                    targets: ".container",
                     easing: "linear",
                     opacity: 1,
                     duration: FADE_TIME
@@ -138,7 +183,7 @@
                     await sleep(displayTime);
 
                     anime({
-                        targets: "#event",
+                        targets: ".container",
                         easing: "linear",
                         opacity: 0,
                         duration: FADE_TIME
