--- a/changelog.html
+++ b/changelog.html
@@ -177,6 +177,35 @@
         <div class="changelog content">
             <div>
                 <h2>
+                    Casterlabs Caffeinated 1.1 Stable 36
+                </h2>
+                <h6>
+                    June 6, 2021
+                </h6>
+                <div class="separator"></div>
+                <h4>
+                    <img class="platform-icon" src="https://assets.casterlabs.co/brime/icon.png" /> Brime:
+                </h4>
+                <ul>
+                    <li>
+                        Made the raid alert available, since Brime now has this :^)
+                    </li>
+                    <li>
+                        There is now a module for changing your title and category right from caffeinated, go ham.
+                    </li>
+                </ul>
+                <h4>
+                    Everyone:
+                </h4>
+                <ul>
+                    <li>
+                        Fixed the missing lang.
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <h2>
                     Casterlabs Caffeinated 1.1 Stable 35
                 </h2>
                 <h6>
