--- a/changelog.html
+++ b/changelog.html
@@ -177,6 +177,24 @@
         <div class="changelog content">
             <div>
                 <h2>
+                    Casterlabs Caffeinated 1.1 Stable 37
+                </h2>
+                <h6>
+                    June 6, 2021
+                </h6>
+                <div class="separator"></div>
+                <h4>
+                    Everyone:
+                </h4>
+                <ul>
+                    <li>
+                        Fixed the raid alert having the wrong message on it.
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <h2>
                     Casterlabs Caffeinated 1.1 Stable 36
                 </h2>
                 <h6>
