--- a/app/index.html
+++ b/app/index.html
@@ -297,6 +297,7 @@
         <script src="lang/nl.js"></script>
 
         <script src="js/util.js"></script>
+        <script src="js/invokable.js"></script>
         <script src="js/kinoko.js"></script>
         <script src="js/currencies.js"></script>
         <script src="js/selectnsearch.js"></script>
